# ext_based_721

./: Cargo.toml  README.md  canister_ids.json  dfx.json  ext_based_721_backend.did.js
src/: demo.sh
src/ext_based_721_backend/: Cargo.toml  ext_based_721_backend.did
src/ext_based_721_backend/src/: main.rs  mod.rs  prop.rs
src/ext_based_721_backend/src/module/: dip721.rs  ledger.rs  mod.rs  token_identifier.rs  types.rs
