[package]
name = "ext_based_721_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }
serde = "1"
serde_json = "1"
anyhow = "1"
ic-ledger-types="0.1.1"